;; We build first the bytecode to be used by the jsoo compiler
(executable
 (name test_bigint)
 (modules test_bigint)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
            jsoo-lib
 )
 (modes byte)
 (preprocess (pps js_of_ocaml-ppx))
)

;; We build first the bytecode to be used by the jsoo compiler
(executable
 (name test_number)
 (modules test_number)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
            jsoo-lib
 )
 (modes byte)
 (preprocess (pps js_of_ocaml-ppx))
)

(rule
 (targets test_bigint.bc.js)
 (action
  (run %{bin:js_of_ocaml}
    %{lib:integers_stubs_js:runtime.js}
    ;; Options for debugging purposes
    %{dep:test_bigint.bc} --pretty --no-inline -o test_bigint.bc.js
  )
 )
)

(rule
 (targets test_number.bc.js)
 (action
  (run %{bin:js_of_ocaml}
    %{lib:integers_stubs_js:runtime.js}
    ;; Options for debugging purposes
    %{dep:test_number.bc} --pretty --no-inline -o test_number.bc.js
  )
 )
)
